Fix long words overflow

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -41,6 +41,7 @@ body {
     margin-left: env(safe-area-inset-left);
     margin-right: env(safe-area-inset-right);
     margin-bottom: calc(4em + env(safe-area-inset-bottom));
+    max-width: calc(100% - 2em); /* Don't overflow the window with over-sized texts. Subtract paddings */
 }
 
 #settings-button, #settings-exit-button {
